ui fixes pour version mobile + redeploy

--- a/Server/client/pages/jam/jam.less
+++ b/Server/client/pages/jam/jam.less
@@ -82,7 +82,8 @@
     padding-left: 10px;
     padding-right: 10px;
     margin-top: 25px;
-    top:80px;
+    overflow: hidden;
+    top:100px;
     right:0;
     left:0;
 
@@ -99,7 +100,7 @@
     }
 
     .groupHeader{
-
+      margin-bottom: 10px;
     }
 
     .sample{
